--- a/BookingTables/BookingTables.csproj
+++ b/BookingTables/BookingTables.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="SendGrid" Version="9.20.0" />
   </ItemGroup>
 
   <ItemGroup>
